# PyWebVue

./: .gitignore  CLAUDE.md  Project.md  README.md  app.py  app.spec  build.py  config.yaml  dev.py  main.py  pyproject.toml
.claude/SKILLS/resume-project-doc/: SKILL.md
.claude/SKILLS/resume-project-doc/references/: resume-template.md
docs/: PRD-2.0.0.md  PRD-2026-03-28.md  Phase2_Test_Instruction-2026-03-28.md  Phase3_Test_Instruction-2026-03-28.md  Phase4_5_Test_Instruction-2026-03-28.md  Resume.md  SKILL.md  api.md  building.md  development-guide-zh.md  development-guide.md  development.md  development_guide-Phase1.md  development_guide-Phase2.md  development_guide-Phase3.md  explore-2026-03-28.md  testing.md  user-guide-zh.md  user-guide.md
examples/file-tool/: README.md  app.py  config.yaml  pyproject.toml
examples/file-tool/frontend/: index.html  package.json  tailwind.config.ts  vite.config.ts
examples/file-tool/frontend/src/: App.vue
examples/file-tool/frontend/src/components/: FileDrop.vue  FileInfoCard.vue  LogPanel.vue  ProgressBar.vue  Toast.vue
examples/file-tool/frontend/src/types/: index.ts
examples/process-tool/: .gitignore  README.md  app.py  config.yaml  pyproject.toml
examples/process-tool/frontend/: index.html  package.json
examples/process-tool/frontend/src/: App.vue  api.ts  event-bus.ts
examples/process-tool/frontend/src/components/: LogPanel.vue  StatusBadge.vue  Toast.vue
examples/process-tool/frontend/src/types/: index.ts
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
issues/: issues-2.0.0.md
issues/2026-04-08/: From-PyWebVue-2026-04-12.md  PLAN.md
pywebvue/: app.py  bridge.py
src/pywebvue/: __init__.py  api_base.py  app.py  cli.py  config.py  constants.py  dialog.py  event_bus.py  logger.py  process.py  result.py  singleton.py
src/pywebvue/templates/project/: .gitignore.tpl  app.py.tpl  config.yaml.tpl  main.py.tpl  pyproject.toml.tpl  {{PROJECT_NAME}}-debug.spec.tpl  {{PROJECT_NAME}}-onefile.spec.tpl  {{PROJECT_NAME}}.spec.tpl
src/pywebvue/templates/project/frontend/: index.html.tpl  package.json.tpl  tsconfig.json.tpl
tests/: test_dropped_files.py  test_event.py  test_expose.py  test_task_queue.py
to_ai/: pywebvue-framework-instruction.md  pywebvue-framework.skill.md
(+10 files in other folders)
