[project]
name = "pywebvue"
version = "2.0.0"
description = "Minimal pywebview + Vue bridge framework"
requires-python = ">=3.10"
dependencies = [
    "pywebview>=6.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pywebvue"]