[project]
name = "process-tool"
version = "0.1.0"
description = "PyWebVue process management tool example"
requires-python = ">=3.10.8"
dependencies = [
    "pywebvue-framework",
    "loguru>=0.7.3",
    "pywebview>=6.1",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
pywebvue-framework = { workspace = true }
